# CAR-MARKET-POLAND-ANALYSIS-STACK

./: .gitignore  README.md  pyproject.toml  run.py
car_market_poland_analysis_stack/: dag_etl_cepik_data.py  run.py
car_market_poland_analysis_stack/addons/airflow_dag_definitions/: dag_cepik_dictionary_voivodeships.py  dag_cepik_vehicles.py  dag_cepik_vehicles_history.py
car_market_poland_analysis_stack/addons/postgresql_definitions/: create_table_with_voivodeship_coord_definitions.sql  procedure_insert_voivodeship_codes_into_coords_table.sql  upsert_vehicles_function.sql  vehicles_table_definition.sql
car_market_poland_analysis_stack/airflow_dag_definitions/: dag_cepik_dictionary_voivodeships.py  dag_load_dictionaries.py
car_market_poland_analysis_stack/scraping/: dictionaries.py  ssl_v1_adapter.py  vehicles.py
car_market_poland_analysis_stack/scraping/dictionaries/: dictionaries.py  get_raw_dictionaries.py  get_raw_dictionary.py
car_market_poland_analysis_stack/scraping/vehicles/: get_raw_vehicles.py  vehicles.py
car_market_poland_analysis_stack/transformations/: gold_save_dictionary_voivodeshipts_to_psql.py  silver_save_dictionary_voivodeships_to_delta.py  silver_save_vehicles_to_delta.py
car_market_poland_analysis_stack/transformations/dictionaries/: gold_save_dictionary_voivodeshipts_to_psql.py  silver_spark_transform_voivodeships.py  spark_silver_load_voivodeships_to_delta.py
car_market_poland_analysis_stack/transformations/schemas/: dict_voivodeships_schema.py  vehicles_schema.py
scraping/: dictionaries.py  vehicles.py
